--- a/food.html
+++ b/food.html
@@ -15,9 +15,10 @@
 <li>pizza</li>
 <li>ceaser salad</li>
 
-
-
 </ul>
+
+
+<a href="index.html">ارجع إلى الصفحة الرئيسية</a>
     
 </body>
 </html>
