--- a/food.html
+++ b/food.html
@@ -5,9 +5,9 @@
     <title>food</title>
 </head>
 <body>
-<h3>my favorite food</h3>
+<h3 style="color: blue;">my favorite food</h3>
 
-<ul>
+<ol style="color:brown">
 
 <li>pasta</li>
 <li>pancakes</li>
@@ -15,7 +15,16 @@
 <li>pizza</li>
 <li>ceaser salad</li>
 
-</ul>
+</ol>
+
+<div>
+ <img src="./pink pasta.jpg" alt="pink pasta"width="400px" height="300px">
+ <img src="./pancakes.jpg" alt="pancakes"width="400px" height="300px">
+
+
+</div>
+
+
 
 
 <a href="index.html">ارجع إلى الصفحة الرئيسية</a>
