--- a/index.html
+++ b/index.html
@@ -10,7 +10,18 @@
 
     <h2>مرحبا اسمي فرح</h2>
 
-  <a href="./food.html"><img src="./bookshelf-background-bookcase-with-books-vector-34852681.jpg" alt="bookshelf"></a>
+    <h4 style="color:blue;">هواياتي</h4>
+
+<ol>
+
+<il>reading</il>
+<li>baking</li>
+<li>programming</li>
+
+
+</ol>
+
+<a href="./food.html"><img src="./bookshelf-background-bookcase-with-books-vector-34852681.jpg" alt="bookshelf"></a>
     
 </body>
 </html>
